--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Airbnb</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div id="root"></div>
